Fix random Java 8 limitations